---
source: crates/ra_cargo_watch/src/conv/test.rs
expression: diag
---
MappedRustDiagnostic {
    location: Location {
        uri: "file:///test/compiler/ty/list_iter.rs",
        range: Range {
            start: Position {
                line: 51,
                character: 4,
            },
            end: Position {
                line: 51,
                character: 47,
            },
        },
    },
    diagnostic: Diagnostic {
        range: Range {
            start: Position {
                line: 51,
                character: 4,
            },
            end: Position {
                line: 51,
                character: 47,
            },
        },
        severity: Some(
            Error,
        ),
        code: Some(
            String(
                "E0053",
            ),
        ),
        source: Some(
            "rustc",
        ),
        message: "method `next` has an incompatible type for trait\nexpected type `fn(&mut ty::list_iter::ListIterator<\'list, M>) -> std::option::Option<&ty::Ref<M>>`\n   found type `fn(&ty::list_iter::ListIterator<\'list, M>) -> std::option::Option<&\'list ty::Ref<M>>`",
        related_information: None,
        tags: None,
    },
    fixes: [],
}
